<resources>
    <string name="app_name">RadenAksara</string>
    <string name="nama_landing">Raden Aksara</string>
    <string name="slogan_landing">Teman Belajar</string>
    <string name="slogan_landing2">Aksara Jawa</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="asal_urun1">Dahulu kala, di sebuah kerajaan Medhangkamulan, bertahtalah seorang raja bernama Prabu Dewata Cengkar. Seorang raja yang sangat rakus, bengis, tamak, dan suka memakan daging manusia. Karena kegemarannya memakan daging manusia, maka secara bergilir rakyatnya pun dipaksa menyetor upeti berwujud manusia.</string>
    <string name="asal_urun2">Mendengar kebengisan Prabu Dewata Cengkar, seorang pengembara bernama Aji Saka bermaksud menghentikan kebiasaan sang raja. Aji Saka mempunyai 2 orang abdi yang sangat setia bernama Dora dan Sembada. Dalam perjalanannya ke kerajaan Medhangkamulan,­ Aji Saka mengajak Dora, sedangkan Sembada tetap ditempat karena harus menjaga sebuah pusaka sakti milik Aji Saka. Aji Saka berpesan kepada Sembada, agar jangan sampai pusaka itu diberikan kepada siapapun kecuali aku (Aji Saka).</string>
    <string name="asal_urun3">Aji Saka segera menuju istana dan menjumpai sang patih. Dia berkata kalau dirinya sanggup dan siap dijadikan santapan Prabu Dewata Cengkar. Tibalah pada hari dimana Aji Saka akan dimakan oleh Prabu Dewata Cengkar. Sebelum dimakan, sang prabu selalu mengabulkan 1 permintaan dari calon korban. Aji Saka memegang salah satu ujung syurban, sedangkan yang lain dipegang oleh Prabu Dewata Cengkar. Aneh, ternyata syurban itu seperti mengembang sehingga Dewata Cengkar harus berjalan mundur, mundur, dan mundur hingga sampai di tepi pantai selatan.</string>
    <string name="asal_urun4">Begitu Dewata Cengkar sampai di tepi pantai selatan, Aji Saka dengan cepat mengibaskan syurbannya sehingga membungkus badan Dewata Cengkar, dan menendangnya hingga terjebur di laut selatan. Tiba-tiba saja tubuh Dewata Cengkar berubah menjadi buaya putih. Sejak saat itu, Kerajaan Medhangkamulan dipimpin oleh Aji Saka. Seorang raja yang arif dan bijaksana. Tiba-tiba Aji Saka teringat akan pusaka saktinya, dan menyuruh Dora untuk mengambilnya. Namun Sembada tidak mau memberikan pusaka itu, karena teringat pesan Aji Saka. Maka terjadilah pertarungan yang hebar diantara Dora dan Sembada. Karena memiliki ilmu dan kesaktian yang seimbang, maka meninggallah Dora dan Sembada secara bersamaan. Aji Saka yang teringat akan pesannya kepada Sembada, segera menyusul. Namun terlambat, karena sesampai di sana, kedua abdinya yang sangat setia itu sudah meninggal dunia.</string>
    <string name="asal_urun5">Untuk mengenang keduanya, maka Aji Saka mengabadikannya­ dalam sebuah Aksara / huruf yang bunyi dan tulisannya:</string>
    <string name="asal_urun6">Ha Na Ca Ra Ka</string>
    <string name="asal_urun7">(ono utusan = ada utusan)</string>
    <string name="asal_urun8">Da Ta Sa Wa La</string>
    <string name="asal_urun9">(padha kekerengan = saling berkelahi)</string>
    <string name="asal_urun10">Pa Da Ja Ya Nya</string>
    <string name="asal_urun11">(padha digdayane = sama-sama saktinya)</string>
    <string name="asal_urun12">Ma Ga Ba Tha Nga</string>
    <string name="asal_urun13">(padha nyunggi bathange = saling berpangku saat meninggal)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
