<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_menu"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_materi"
    tools:context=".AsalUrunActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/gambar2"
            android:layout_below="@+id/tv1"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:src="@drawable/asal_urun"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/teks1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gambar2"
            android:text="@string/asal_urun1"
            android:textColor="#9f5b2e"
            android:textStyle="bold"
            android:textSize="14sp"
            android:padding="5dp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/teks2"
            android:layout_below="@+id/teks1"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:text="@string/asal_urun2"
            android:textColor="#9f5b2e"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14sp"/>

        <ImageView
            android:id="@+id/image_asalusul"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/teks2"
            android:src="@drawable/asal_usul2"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/teks3"
            android:layout_below="@+id/image_asalusul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asal_urun6"
            android:textColor="#9f5b2e"
            android:textStyle="bold"
            android:textSize="14sp"
            android:gravity="center" />
        <TextView
            android:id="@+id/teks4"
            android:layout_below="@+id/teks3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asal_urun7"
            android:textColor="#9f5b2e"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/teks5"
            android:layout_below="@+id/teks4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asal_urun8"
            android:textColor="#9f5b2e"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:id="@+id/teks6"
            android:layout_below="@+id/teks5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asal_urun9"
            android:textColor="#9f5b2e"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:id="@+id/teks7"
            android:layout_below="@+id/teks6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asal_urun10"
            android:textColor="#9f5b2e"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:id="@+id/teks8"
            android:layout_below="@+id/teks7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asal_urun11"
            android:textColor="#9f5b2e"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:id="@+id/teks9"
            android:layout_below="@+id/teks8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asal_urun12"
            android:textColor="#9f5b2e"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"/>
    </RelativeLayout>
</ScrollView>


